--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,12 +30,12 @@ stages:
       vmImage: $(vmImageName)
 
     steps:
-    - task: JavaToolInstaller@0
-      displayName: 'Install Java 22'
-      inputs:
-        versionSpec: '22'
-        jdkArchitectureOption: 'x64'
-        jdkSourceOption: 'PreInstalled'
+    # - task: JavaToolInstaller@0
+    #   displayName: 'Install Java 22'
+    #   inputs:
+    #     versionSpec: '22'
+    #     jdkArchitectureOption: 'x64'
+    #     jdkSourceOption: 'PreInstalled'
 
     - task: Maven@3
       displayName: 'Maven Package'
